--- a/package.json
+++ b/package.json
@@ -3,27 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@capacitor/core": "^2.1.0",
-    "@ionic/core": "^5.1.1",
-    "@ionic/react": "^5.1.1",
-    "@ionic/react-router": "^5.1.1",
-    "@testing-library/dom": "^7.5.7",
-    "@testing-library/jest-dom": "^5.7.0",
-    "@testing-library/react": "^10.0.4",
-    "@testing-library/user-event": "^10.3.1",
-    "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.1",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router": "^5.1.7",
-    "@types/react-router-dom": "^5.1.5",
-    "ionicons": "^5.0.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
-    "typescript": "^3.9.2"
+    "@capacitor/core": "2.4.7",
+    "@ionic/core": "5.6.5",
+    "@ionic/react": "5.6.5",
+    "@ionic/react-router": "5.6.5",
+    "@testing-library/dom": "7.30.4",
+    "@testing-library/jest-dom": "5.12.0",
+    "@testing-library/react": "10.4.9",
+    "@testing-library/user-event": "10.4.1",
+    "@types/jest": "25.2.3",
+    "@types/node": "14.14.41",
+    "@types/react": "16.14.5",
+    "@types/react-dom": "16.9.12",
+    "@types/react-router": "5.1.13",
+    "@types/react-router-dom": "5.1.7",
+    "firebase": "8.4.1",
+    "history": "^5.0.0",
+    "ionicons": "5.5.1",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "3.4.4",
+    "typescript": "3.9.9"
   },
   "scripts": {
     "start": "react-scripts-ts start",
