--- a/package.json
+++ b/package.json
@@ -3,29 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@capacitor/core": "2.4.7",
-    "@ionic/core": "5.6.5",
-    "@ionic/react": "5.6.5",
-    "@ionic/react-router": "5.6.5",
-    "@testing-library/dom": "7.30.4",
-    "@testing-library/jest-dom": "5.12.0",
-    "@testing-library/react": "10.4.9",
-    "@testing-library/user-event": "10.4.1",
-    "@types/jest": "25.2.3",
-    "@types/node": "14.14.41",
-    "@types/react": "16.14.5",
-    "@types/react-dom": "16.9.12",
-    "@types/react-router": "5.1.13",
-    "@types/react-router-dom": "5.1.7",
-    "firebase": "8.4.1",
+    "@capacitor/core": "^2.4.7",
+    "@firebase/app": "^0.6.20",
+    "@ionic/core": "^5.6.5",
+    "@ionic/react": "^5.6.5",
+    "@ionic/react-router": "^5.6.5",
+    "@testing-library/dom": "^7.30.4",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.5",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-router": "^5.1.13",
+    "@types/react-router-dom": "^5.1.7",
+    "firebase": "^8.4.2",
     "history": "^5.0.0",
-    "ionicons": "5.5.1",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.4",
-    "typescript": "3.9.9"
+    "ionicons": "^5.5.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts-ts start",
